@@ -6,12 +6,12 @@ import com.tarakki.common.entity.Board;
 import com.tarakki.boardtask.repository.BoardRepository;
 import com.tarakki.boardtask.repository.OrganizationRepository;
 import com.tarakki.boardtask.service.BoardService;
+import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -31,9 +31,14 @@ public class BoardServiceImpl implements BoardService {
     }
 
     @Override
+    @Transactional
+    public void deleteBoard(Long boardId) {
+        boardRepository.deleteBoardById(boardId);
+    }
+
+    @Override
     public List<BoardDTO> getBoardsByOrganization(Long orgId) {
 
-        // Validate organization exists
         if (!organizationRepository.existsById(orgId)) {
             throw new OrganisationNotFoundException(orgId);
         }
@@ -41,6 +46,6 @@ public class BoardServiceImpl implements BoardService {
         List<Board> boards = boardRepository.findByOrgId(orgId);
         return boards.stream()
                 .map(board -> modelMapper.map(board, BoardDTO.class))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
